--- a/index.html
+++ b/index.html
@@ -1,65 +1,76 @@
-P<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Studio</title>
   </head>
   <body>
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a class="link logo first-logo-color" href="./index.html">Web</a>
+        <a class="link logo second-logo-color" href="./index.html">Studio</a>
+        <ul class="list">
+          <li><a class="link main-nav main-nav-active" href="index.html">Студия</a></li>
+          <li><a class="link main-nav" href="portfolio.html">Портфолио</a></li>
+          <li><a class="link main-nav" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li><a class="link feedback" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link feedback" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- main -->
     <main>
       <!-- section-1 -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="main-section-bg">
+        <h1 class="main-section-text">Эффективные решения для вашего бизнеса</h1>
+        <button class="main-section-btn" type="button">Заказать услугу</button>
       </section>
       <!-- section-2 -->
       <section>
         <h2></h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особен,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,0ности же рамки и место
-              обучения кадров влечет за собой.
+            <h3 class="feature">Внимание к деталям</h3>
+            <p class="feature-title">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="feature">Пунктуальность</h3>
+            <p class="feature-title">
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="feature">Планирование</h3>
+            <p class="feature-title">
               Равным образом консультация с широким активом в значительной степени обуславливает
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="feature">Современные технологии</h3>
+            <p class="feature-title">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!-- section-3 -->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="about">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./image/sec1-img1.jpg" alt="человек кодит на пк" width="370" height="294" />
           </li>
@@ -82,45 +93,53 @@ P<!DOCTYPE html>
         </ul>
       </section>
       <!-- section-4 -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="our-team-bg">
+        <h2 class="about">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./image/worker-man-1.jpg" alt="мужчина в очках" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="worker-name">Игорь Демьяненко</h3>
+            <p class="worker-job" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./image/worker-woman.jpg" alt="девушка в очках" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="worker-name">Ольга Репина</h3>
+            <p class="worker-job" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./image/worker-man-2.jpg" alt="парень" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="worker-name">Николай Тарасов</h3>
+            <p class="worker-job" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./image/worker-man-3.jpg" alt="парень в очках" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="worker-name">Михаил Ермаков</h3>
+            <p class="worker-job" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer-bg">
+      <a class="link logo first-logo-color" href="./index.html">Web</a>
+      <a class="link logo footer-logo-color" href="./index.html">Studio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
+              class="link addres addres-map"
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a class="link addres addres-feedback" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="link addres addres-feedback" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
