--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
         <li><a class="link feedback" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- main -->
     <main>
       <section>
         <ul class="list">
@@ -39,7 +40,78 @@
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
+        <ul class="list">
+          <li>
+            <img src="./image/techocrak.jpg" alt="ноутбук" width="370" height="294" />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./image/poster.jpg" alt="постер" width="370" height="294" />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./image/restaurant-logo.jpg" alt="лого ресторана" width="370" height="294" />
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./image/prime.jpg" alt="навушники" width="370" height="294" />
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./image/boxes.jpg" alt="коробки" width="370" height="294" />
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./image/tv.jpg" alt="монітор" width="370" height="294" />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./image/book.jpg" alt="книга" width="370" height="294" />
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./image/lab.jpg" alt="бірка" width="370" height="294" />
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./image/laptop.jpg" alt="ноутбук2" width="370" height="294" />
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+          </li>
+        </ul>
       </section>
     </main>
+    <!-- footer -->
+    <footer class="footer-bg">
+      <a class="link logo first-logo-color" href="./index.html">Web</a>
+      <a class="link logo footer-logo-color" href="./index.html">Studio</a>
+      <address>
+        <ul class="list">
+          <li>
+            <a
+              class="link addres addres-map"
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a class="link addres addres-feedback" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="link addres addres-feedback" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
