add portfolio css

--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
         <ul class="list">
           <li>
             <img src="./image/worker-man-1.jpg" alt="мужчина в очках" width="270" height="260" />
-            <h3 class="worker-name">Игорь Демьяненко</h3>
-            <p class="worker-job" lang="en">Product Designer</p>
+            <h3 class="worker worker-name">Игорь Демьяненко</h3>
+            <p class="worker worker-job" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./image/worker-woman.jpg" alt="девушка в очках" width="270" height="260" />
-            <h3 class="worker-name">Ольга Репина</h3>
-            <p class="worker-job" lang="en">Frontend Developer</p>
+            <h3 class="worker worker-name">Ольга Репина</h3>
+            <p class="worker worker-job" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./image/worker-man-2.jpg" alt="парень" width="270" height="260" />
-            <h3 class="worker-name">Николай Тарасов</h3>
-            <p class="worker-job" lang="en">Marketing</p>
+            <h3 class="worker worker-name">Николай Тарасов</h3>
+            <p class="worker worker-job" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./image/worker-man-3.jpg" alt="парень в очках" width="270" height="260" />
-            <h3 class="worker-name">Михаил Ермаков</h3>
-            <p class="worker-job" lang="en">UI Designer</p>
+            <h3 class="worker worker-name">Михаил Ермаков</h3>
+            <p class="worker worker-job" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
