--- a/portfolio.html
+++ b/portfolio.html
@@ -34,57 +34,57 @@
     <main>
       <section>
         <ul class="list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="filter-btn filter-btn-active" type="button">Все</button></li>
+          <li><button class="filter-btn" type="button">Веб-сайты</button></li>
+          <li><button class="filter-btn" type="button">Приложения</button></li>
+          <li><button class="filter-btn" type="button">Дизайн</button></li>
+          <li><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <ul class="list">
           <li>
             <img src="./image/techocrak.jpg" alt="ноутбук" width="370" height="294" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Технокряк</h2>
+            <p class="project-kind">Веб-сайт</p>
           </li>
           <li>
             <img src="./image/poster.jpg" alt="постер" width="370" height="294" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+            <p class="project-kind">Дизайн</p>
           </li>
           <li>
             <img src="./image/restaurant-logo.jpg" alt="лого ресторана" width="370" height="294" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Ресторан Seafood</h2>
+            <p class="project-kind">Приложение</p>
           </li>
           <li>
             <img src="./image/prime.jpg" alt="навушники" width="370" height="294" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="project-name">Проект Prime</h2>
+            <p class="project-kind">Маркетинг</p>
           </li>
           <li>
             <img src="./image/boxes.jpg" alt="коробки" width="370" height="294" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Проект Boxes</h2>
+            <p class="project-kind">Приложение</p>
           </li>
           <li>
             <img src="./image/tv.jpg" alt="монітор" width="370" height="294" />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Inspiration has no Borders</h2>
+            <p class="project-kind">Веб-сайт</p>
           </li>
           <li>
             <img src="./image/book.jpg" alt="книга" width="370" height="294" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Издание Limited Edition</h2>
+            <p class="project-kind">Дизайн</p>
           </li>
           <li>
             <img src="./image/lab.jpg" alt="бірка" width="370" height="294" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="project-name">Проект LAB</h2>
+            <p class="project-kind">Маркетинг</p>
           </li>
           <li>
             <img src="./image/laptop.jpg" alt="ноутбук2" width="370" height="294" />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Growing Business</h2>
+            <p class="project-kind">Приложение</p>
           </li>
         </ul>
       </section>
