change few moments

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -17,8 +17,9 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="link logo first-logo-color" href="./index.html">Web</a>
-        <a class="link logo second-logo-color" href="./index.html">Studio</a>
+        <a class="link logo first-logo-color" href="./index.html"
+          >Web<span class="second-logo-color">Studio</span></a
+        >
         <ul class="list">
           <li><a class="link main-nav" href="index.html">Студия</a></li>
           <li><a class="link main-nav main-nav-active" href="portfolio.html">Портфолио</a></li>
@@ -33,6 +34,7 @@
     <!-- main -->
     <main>
       <section>
+        <h1></h1>
         <ul class="list">
           <li><button class="filter-btn filter-btn-active" type="button">Все</button></li>
           <li><button class="filter-btn" type="button">Веб-сайты</button></li>
@@ -91,8 +93,9 @@
     </main>
     <!-- footer -->
     <footer class="footer-bg">
-      <a class="link logo first-logo-color" href="./index.html">Web</a>
-      <a class="link logo footer-logo-color" href="./index.html">Studio</a>
+      <a class="link logo first-logo-color" href="./index.html"
+        >Web<span class="footer-logo-color">Studio</span></a
+      >
       <address>
         <ul class="list">
           <li>
